--- a/src/app/campgrounds/home/home.component.html
+++ b/src/app/campgrounds/home/home.component.html
@@ -13,7 +13,9 @@
     <div class="heading-top">
       <h1 class="mat-display-2">Welcome to YelpCamp!</h1>
 
-      <h3>View our hand-picked campgrounds from all over the world</h3>
+      <h3>
+        View our hand-picked campgrounds and resorts from all over the world
+      </h3>
     </div>
 
     <div
