--- a/src/app/auth/user/user.component.css
+++ b/src/app/auth/user/user.component.css
@@ -145,6 +145,12 @@ mat-slide-toggle:last-of-type {
   border-radius: 50%;
 }
 
+@media screen and (max-width: 1400px) {
+  .notification-switch-case {
+    flex-direction: column;
+  }
+}
+
 @media screen and (max-width: 950px) {
   .container-user {
     width: 70%;
@@ -178,10 +184,6 @@ mat-slide-toggle:last-of-type {
 @media screen and (max-width: 700px) {
   .container-user {
     width: 90%;
-  }
-
-  .notification-switch-case {
-    flex-direction: column;
   }
 }
 
