--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -33,19 +33,37 @@ a {
   flex: 1 1 auto;
 }
 
+.header-username {
+  background-color: transparent;
+}
+
+.user-avatar-badge,
+.user-avatar {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: start;
+  align-content: center;
+  padding: 4px;
+  padding-bottom: 2px;
+  border: 1px solid rgba(0, 0, 0, 0);
+  /* border-radius: 25% 10%; */
+  border-radius: 50% 20% / 10% 40%;
+  transition: border 0.25s background 0.25s;
+}
+
 .user-avatar-badge img,
 .user-avatar img {
-  width: 35px;
-  height: 35px;
+  width: 30px;
+  height: 30px;
   object-fit: cover;
   border-radius: 50%;
   overflow: hidden;
-  transition: opacity 0.5s;
 }
 
-.user-avatar-badge img:hover,
-.user-avatar img:hover {
-  opacity: 50%;
+.user-avatar-badge:hover,
+.user-avatar:hover {
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  background: rgba(256, 256, 256, 0.3);
 }
 
 .yelpcamp-location-flag {
