--- a/src/app/campgrounds/home/home.component.html
+++ b/src/app/campgrounds/home/home.component.html
@@ -164,11 +164,16 @@
 <div class="courtesy-footer" *ngIf="!isLoading">
   <p>
     Flag icons made by
-    <a href="https://www.flaticon.com/authors/freepik" title="Freepik"
+    <a
+      href="https://www.flaticon.com/authors/freepik"
+      target="_blank"
+      title="Freepik"
       >Freepik</a
     >
     from
-    <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com. </a>
+    <a href="https://www.flaticon.com/" target="_blank" title="Flaticon">
+      www.flaticon.com.
+    </a>
     <!-- Country code courtesy: https://ipinfo.io -->
   </p>
 </div>
